Bug 317189. Do the second-scroll-to-anchor on onload (i.e. subresources have loaded), not just when the document has finished loading. Also, don't do it at all if the user has scrolled manually between the first anchor scroll and the second. r+sr=dbaron